--- a/pages/ds/ds.html
+++ b/pages/ds/ds.html
@@ -136,14 +136,14 @@
   </svg>
 </a>
 
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
 
-<!-- nes # -->
+<!-- ds # -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/09.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(#)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/09.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(#)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -152,14 +152,14 @@
     </a>
     </ul>
 </li>
-<!-- End nes #-->
+<!-- End ds #-->
 
 
-<!-- nes a -->
+<!-- ds a -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/a.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(a)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/a.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(a)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -168,13 +168,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes a-->
+<!-- End ds a-->
 
-<!-- nes b -->
+<!-- ds b -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/b.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(b)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/b.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(b)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -183,13 +183,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes b-->
+<!-- End ds b-->
 
-<!-- nes c -->
+<!-- ds c -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/c.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(c)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/c.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(c)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -198,13 +198,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes c-->
+<!-- End ds c-->
 
-<!-- nes d -->
+<!-- ds d -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/d.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(d)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/d.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(d)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -213,12 +213,12 @@
     </a>
     </ul>
 </li>
-<!-- End nes d-->
-<!-- nes e -->
+<!-- End ds d-->
+<!-- ds e -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/e.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(e)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/e.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(e)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -227,13 +227,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes e-->
+<!-- End ds e-->
 
-<!-- nes f -->
+<!-- ds f -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/f.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(f)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/f.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(f)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -242,13 +242,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes f-->
+<!-- End ds f-->
 
-<!-- nes g -->
+<!-- ds g -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/g.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(g)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/g.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(g)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -257,13 +257,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes g-->
+<!-- End ds g-->
 
-<!-- nes h -->
+<!-- ds h -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/h.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(h)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/h.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(h)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -272,13 +272,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes h-->
+<!-- End ds h-->
 
-<!-- nes i -->
+<!-- ds i -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/i.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(i)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/i.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(i)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -287,13 +287,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes i-->
+<!-- End ds i-->
 
-<!-- nes j -->
+<!-- ds j -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/j.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(j)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/j.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(j)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -302,13 +302,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes j-->
+<!-- End ds j-->
 
-<!-- nes k -->
+<!-- ds k -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/k.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(k)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/k.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(k)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -317,13 +317,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes k-->
+<!-- End ds k-->
 
-<!-- nes l -->
+<!-- ds l -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/l.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(l)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/l.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(l)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -332,13 +332,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes l-->
+<!-- End ds l-->
 
-<!-- nes m -->
+<!-- ds m -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/m.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(m)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/m.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(m)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -347,13 +347,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes m-->
+<!-- End ds m-->
 
-<!-- nes n -->
+<!-- ds n -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/n.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(n)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/n.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(n)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -362,13 +362,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes n-->
+<!-- End ds n-->
 
-<!-- nes o -->
+<!-- ds o -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/o.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(o)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/o.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(o)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -377,13 +377,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes o-->
+<!-- End ds o-->
 
-<!-- nes p -->
+<!-- ds p -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/p.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(p)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/p.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(p)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -392,13 +392,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes p-->
+<!-- End ds p-->
 
-<!-- nes q -->
+<!-- ds q -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/q.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(q)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/q.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(q)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -407,13 +407,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes q-->
+<!-- End ds q-->
 
-<!-- nes r -->
+<!-- ds r -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/r.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(r)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/r.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(r)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -422,13 +422,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes r-->
+<!-- End ds r-->
 
-<!-- nes s -->
+<!-- ds s -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/s.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(s)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/s.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(s)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -437,13 +437,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes s-->
+<!-- End ds s-->
 
-<!-- nes t -->
+<!-- ds t -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/t.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(t)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/t.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(t)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -452,13 +452,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes t-->
+<!-- End ds t-->
 
-<!-- nes u -->
+<!-- ds u -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/u.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(u)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/u.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(u)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -467,13 +467,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes u-->
+<!-- End ds u-->
 
-<!-- nes v -->
+<!-- ds v -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/v.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(v)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/v.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(v)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -482,13 +482,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes v-->
+<!-- End ds v-->
 
-<!-- nes w -->
+<!-- ds w -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/w.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(w)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/w.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(w)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -497,13 +497,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes w-->
+<!-- End ds w-->
 
-<!-- nes x -->
+<!-- ds x -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/x.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(x)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/x.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(x)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -512,13 +512,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes x-->
+<!-- End ds x-->
 
-<!-- nes y -->
+<!-- ds y -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/y.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(y)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/y.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(y)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -527,13 +527,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes y-->
+<!-- End ds y-->
 
-<!-- nes z -->
+<!-- ds z -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/z.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(z)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/z.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128> <alph>(z)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -542,7 +542,7 @@
     </a>
     </ul>
 </li>
-<!-- End nes z-->
+<!-- End ds z-->
     
  <br></br><br></br></ul>
   </div>
